--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 
 h1 {
     color: #333;
+    font-size: 24px;
 }
 
 input {
@@ -35,6 +36,7 @@ button {
     color: white;
     font-size: 16px;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
 
 button:hover {
@@ -44,4 +46,5 @@ button:hover {
 #result {
     margin-top: 15px;
     font-weight: bold;
+    color: blue;
 }
