--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
 
 h1 {
     color: #333;
-    font-size: 24px;
 }
 
 input {
@@ -36,7 +35,6 @@ button {
     color: white;
     font-size: 16px;
     cursor: pointer;
-    transition: background-color 0.3s;
 }
 
 button:hover {
@@ -46,5 +44,5 @@ button:hover {
 #result {
     margin-top: 15px;
     font-weight: bold;
-    color: blue;
+    color: #d9534f;
 }
